More cleverly disable scroll to maintain scrollbars and stop flickering

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,3 @@
 .gradient-text {
     @apply inline-block h-fit w-fit bg-gradient-to-r from-gradientPink to-gradientBlue bg-clip-text text-transparent;
 }
-
-body.no-scroll {
-    overflow: hidden;
-}
